fix () align div img with padding

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,12 @@
   .App-logo {
     animation: App-logo-spin infinite 30s linear;
     height: 40vmin;
-    padding-top: 20px 0px 20px 0px;
   }
 
-  div img { vertical-align:middle; }
+  div img {
+    vertical-align:middle;
+    padding-top: 20px 0px 20px 0px;
+  }
 
   @keyframes App-logo-spin {
     from {
